--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://instagram.com/arunn_krishh?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://in.linkedin.com/in/arun-krishnan-k-1418a2277" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
