--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Arun krishnan K</h4>
               <p><em>Passionate frontend developer skilled in creating responsive personal websites, dedicated to optimizing loading speed and staying updated with the latest industry trends.</em></p>
