Professional experience changed

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
               <p><em>Bangalore, INDIA</em></p>
               <p>Student internship programme </p>
               <ul>
-                <li>Basic programming </li>
-                <li>Website Designing</li>
+                <li>Front-end development </li>
+                <li>GIT version control </li>
                 
               </ul>
             </div>
