Necessary text edits

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             </div>
             <p class="pt-4">
               I am a dedicated frontend developer well-versed in HTML, CSS, and JavaScript, passionate about merging design finesse with functional excellence. My expertise lies in translating imaginative concepts into responsive and immersive web experiences.
+              Check out my other social media accounts and connect with me, by clicking respective icons.
             </p>
           </div>
         </div>
@@ -130,7 +131,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I'm a web developer with a strong command of HTML, CSS, jQuery, JavaScript, and Bootstrap. Through these languages and frameworks, I craft dynamic and visually appealing websites that offer intuitive user experiences. </p>
+          <p>I'm a web developer with a strong command of HTML, CSS, jQuery, JavaScript, and Bootstrap. Through these languages and frameworks, I craft dynamic and visually appealing websites that offer intuitive user experiences. I am also learned GIT version control tool. You can check my activities on GITHUB account. </p>
         </div>
 
         <div class="row skills-content">
@@ -229,7 +230,7 @@
               <h4>GRADUATION</h4>
               <h5>2023 - 2027</h5>
               <p><em>NATIONAL INSTITUTE OF TECHNOLOGIES CALICUT</em></p>
-              <p> Aspering student with specialisation in Civil Engineering  </p>
+              <p> Aspering student with specialisation in Civil Engineering <br>Other Activities: NATIONAL SERVICE SCHEME   </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
