--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
               </div>
             </div>
             <p class="pt-4">
-              I am a dedicated frontend developer well-versed in HTML, CSS, and JavaScript, passionate about merging design finesse with functional excellence. My expertise lies in translating imaginative concepts into responsive and immersive web experiences.
-              Check out my other social media accounts and connect with me, by clicking respective icons.
+              I am a dedicated frontend developer well-versed in HTML, CSS, and JavaScript, passionate about merging design finesse with functional excellence. My expertise lies in translating imaginative concepts into responsive and immersive web experiences. <br> Check out my other social media accounts and connect with me, by clicking respective icons.
             </p>
           </div>
         </div>
