--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>arunkrish11@outlook</p>
+                <p>arunkrishnank47@gmail.com</p>
               </div>
 
               <img class="pt-5 mt-5" style="width: 100%;" src="https://media.istockphoto.com/id/1129113667/photo/got-a-problem-contact-us.jpg?s=612x612&w=0&k=20&c=XY6CdTS4PlkiS2rw_EWmJdg7_fG5o4t28xxL5GU9d0E=" alt="">
@@ -411,12 +411,7 @@
               <div class="form-group">
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
+            
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
