--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="" id="submit-form" role="form">
+            <form action="" id="submit-form" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -411,7 +411,11 @@
               <div class="form-group">
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
-            
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
