--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arunkrish11outlook.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arunkrishnank47@gmail.com</span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -202,7 +202,7 @@
               <p><em>Passionate frontend developer skilled in creating responsive personal websites, dedicated to optimizing loading speed and staying updated with the latest industry trends.</em></p>
               <ul>
                 <li>Bangalore, INDIA</li>
-                <li>arunkrish11@outlook</li>
+                <li>arunkrishnank47@gmail.com</li>
               </ul>
             </div>
 
