--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="text-light"><a href="index.html">Arun krishnan K</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/ARUNKRISH11" class="github "><i class="bx bxl-github"></i></a>
-          <a href="https://dev.to/arunkrish11" class="devto"><i class="bx bxl-devto"></i></a>
+          <a href="https://dev.to/arunkrish11" class="devto"><i class="fa-brands fa-dev" style="color: #ffffff;"></i></a>
           <a href="https://instagram.com/arunn_krishh?utm_source=qr&igshid=ZDc4OdBmNjlNQ%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://in.linkedin.com/in/arun-krishnan-k-1418a2277" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
