--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="text-light"><a href="index.html">Arun krishnan K</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/ARUNKRISH11" class="github "><i class="bx bxl-github"></i></a>
-          <a href="https://dev.to/arunkrish11" class="devto"><i class="fa-brands fa-dev" style="color: #000000;"></i></a>
+          <a href="https://dev.to/arunkrish11" class="devcommunity"><i class="fa-brands fa-dev"></i></a>
           <a href="https://instagram.com/arunn_krishh?utm_source=qr&igshid=ZDc4OdBmNjlNQ%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://in.linkedin.com/in/arun-krishnan-k-1418a2277" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -446,6 +446,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
+  <script src="https://kit.fontawesome.com/e2a8cbc556.js" crossorigin="anonymous"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
