--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
   <title>Arun krishnan K</title>
     <link rel="icon" href="ak.jpg " >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,7 +29,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -97,19 +95,20 @@
             <div class="row pt-4">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10/08/2004</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Aug 10</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bangalore, INDIA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arunkrishnank47@gmail.com</span></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arunkrishnank47@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
             <p class="pt-4">
-              I am a dedicated frontend developer well-versed in HTML, CSS, and JavaScript, passionate about merging design finesse with functional excellence. My expertise lies in translating imaginative concepts into responsive and immersive web experiences. <br> Check out my other social media accounts and connect with me, by clicking respective icons.
+              I am a dedicated frontend developer well-versed in HTML, CSS, and JavaScript, passionate about merging design finesse with functional excellence. My expertise lies in translating imaginative concepts into responsive and immersive web experiences. <br><br>
+              Check out my other social media accounts and connect with me, by clicking respective icons.
             </p>
           </div>
         </div>
@@ -223,7 +222,7 @@
               <h4>GRADUATION</h4>
               <h5>2023 - 2027</h5>
               <p><em>NATIONAL INSTITUTE OF TECHNOLOGIES CALICUT</em></p>
-              <p> Aspering student with specialisation in Civil Engineering <br>Other Activities: NATIONAL SERVICE SCHEME   </p>
+              <p> Aspering Btech Student <br>Other Activities: NATIONAL SERVICE SCHEME  </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -234,8 +233,9 @@
               <p><em>Bangalore, INDIA</em></p>
               <p>Student internship programme </p>
               <ul>
-                <li>Front-end development </li>
-                <li>GIT version control </li>
+                <li>Frontend development</li>
+                <li>GIT Version control </li>
+
                 
               </ul>
             </div>
@@ -411,6 +411,7 @@
               <div class="form-group">
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
+              </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error"></div>
@@ -459,7 +460,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-    <script>
+  <script>
     $("#submit-form").submit((e)=>{
         e.preventDefault()
         $.ajax({
