Profile link added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="ak.jpg" alt="" class="img-fluid rounded-circle">
+        <a href="#hero" class="nav-link scrollto"><img src="ak.jpg" alt="Profile" class="img-fluid rounded-circle"></a>
         <h1 class="text-light"><a href="index.html">Arun krishnan K</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/ARUNKRISH11" class="github "><i class="bx bxl-github"></i></a>
